Adjust the height of the images so to avoid stretching images

--- a/src/Stylesheets/_Personal.scss
+++ b/src/Stylesheets/_Personal.scss
@@ -23,7 +23,7 @@
 
         .personalDiv {
             img {
-                height: 250px;
+                height: 230px;
                 width: 300px;
                 border-radius: 5px;
                 box-shadow: 0 13px 27px -5px rgba(50, 50, 93, 0.25), 0 8px 16px -8px rgba(0, 0, 0, 0.3);
@@ -206,7 +206,7 @@
 
         .personalTitle {
             font-size: 60px;
-            padding: 30px 50px 30px 50px;
+            padding: 50px 50px 30px 50px;
             display: flex;
             align-items: flex-end;
 
@@ -228,7 +228,7 @@
 
             .personalDiv {
                 img {
-                    height: 250px;
+                    height: 230px;
                     width: 300px;
                     border-radius: 5px;
                 }
